2006-04-14  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* surflib/load_surface_file.hpp (load_bicobj_file_with_scalar):
	Improve the error reporting.

	* surflib/Makefile.am (headers_hpp): Add AlphaShapeUtil.hpp and
	DistanceTransform.hpp.

	* tools/t_surface_distance_transform.sh: 
	* tools/t_alpha_shape.sh: 
	* registration/t-surface-data-term-1.sh: 
	* registration/t-initial-surface-map.sh: Use ${srcdir} to find
	test files, so that an out-of-source build works.

	* tools/Makefile.am (LDADD): 
	* surflib/test/Makefile.am (LDADD): 
	* registration/Makefile.am (LDADD): Add $(bic_LIBS), needed
	to pick up bicpl.

	* Makefile.am (EXTRA_DIST): Add data files for testing.

2005-09-05  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* registration/surface-data-term-1.sh: Add /usr/local/gnu/bin
	to the PATH, for users at the BIC.  This script breaks if the
	SGI join is used.

2005-07-26  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.ac: Set version to 0.4.

	* registration/surftracc.hpp: 
	* surflib/Search.cpp: 
	* surflib/ShortestPathQuery.cpp: 
	* surflib/ShortestPathQuery.hpp:
	* surflib/SurfaceMap.hpp:
	* surflib/SurfaceMap_hash.hpp:
	* surflib/SurfaceMap_hds.cpp:
	* surflib/SurfaceMap_poly.cpp:
	* surflib/surface_checking.hpp: Small fixes required for GCC 4.

2005-06-21  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.ac: Set version to 0.3.

	* registration/surface-data-term-1.sh: New option -dt_extra.

	* surflib/FileReader.hpp: Improve exception messages.

	* surflib/VTKFile.hpp
	* surflib/src/VTKFile.cc: Unify constructors and improve
	initialization-time exception messages.

	* tools/label-connected-regions (read_labels): Remove.  Use
	MNI::load_surface_with_scalar() rather than
	MNI::load_surface_file() and read_labels().

	* registration/initial-surface-map.cc (main):
	* registration/refine-surface-map.cc (main):
	* registration/surftracc.cc (main):
	* tools/alpha-shape.cc (main):