@@ -1,3 +1,8 @@
+2006-04-15  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* registration/t-surface-data-term-1.sh: Modify $PATH so that
+	alpha-shape and surface-distance-transform may be found.
+
 2006-04-14  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* surflib/load_surface_file.hpp (load_bicobj_file_with_scalar):
